[package]
name = "tracert"
version = "0.11.0"
edition = "2024"
authors = ["shellrow <shellrow@foctal.com>"]
description = "Cross-platform library for traceroute and ping"
repository = "https://github.com/shellrow/tracert"
readme = "README.md"
keywords = ["network"]
categories = ["network-programming"]
license = "MIT"

[dependencies]
socket2 = { version = "0.5", features = ["all"] }
nex-packet = "0.25"
dns-lookup = "2.1"
netdev = "0.40"
rand = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "time", "net", "sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "signal", "macros"] }
